@@ -1,5 +1,15 @@
 2002-09-30  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* lib/user32/misc/desktop.c (string.h): Include.
+	* lib/user32/misc/resources.c: Ditto.
+	* lib/user32/misc/winhelp.c: Ditto.
+	* lib/user32/windows/accel.c: Ditto.
+	* lib/user32/windows/bitmap.c: Ditto.
+	* subsys/win32k/freetype/ctype.c: Undefine __MSVCRT__ and _pctype to not
+	have mingw runtime import _pctype.
+
+2002-09-30  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* ntoskrnl/cc/view.c (alloca): Prototype.
 	* ntoskrnl/rtl/ctype.c: Undefine __MSVCRT__ to not have mingw runtime
 	import _pctype.
